@@ -1,5 +1,6 @@
 package com.selcukcihan.android.sensors;
 
+import android.content.Context;
 import android.content.Intent;
 import android.hardware.Sensor;
 import android.hardware.SensorEvent;
@@ -29,26 +30,28 @@ import java.util.ArrayList;
 
 
 public class DetailActivity extends AppCompatActivity implements SensorEventListener {
-    private SensorManager mSensorManager;
+    private SensorContainer mSensors;
     private SensorWrapper mSensor;
     private ShareActionProvider mShareActionProvider;
     private Intent mShareIntent;
     private String mShareString = "{0}{1}";
     private String mSensorValues = "";
-    private TextView mReadingsTextView;
     private float []mValues;
+    private Toolbar mToolbar;
 
 
-    private SensorWrapper[] mSensors;
     private ViewPager mPager;
     private PagerAdapter mPagerAdapter;
 
+    private SensorFragment mFragment;
+
+    /*
     public void showPopup(View v) {
         PopupMenu popup = new PopupMenu(this, v);
         MenuInflater inflater = popup.getMenuInflater();
         inflater.inflate(R.menu.details, popup.getMenu());
         popup.show();
-    }
+    }*/
 
     private void initializeShareIntent() {
         mShareIntent = new Intent();
@@ -72,68 +75,50 @@ public class DetailActivity extends AppCompatActivity implements SensorEventList
 
         return true;
     }
+/*
+    private void renderMetaData() {
+        TextView toolbarTitle = (TextView) mToolbar.findViewById(R.id.toolbar_title);
+        toolbarTitle.setText(mSensor.getLocalizedName());
+        ((ImageView)findViewById(R.id.sensor_toolbar_icon)).setImageResource(mSensor.getImageId());
+
+        ((TextView)findViewById(R.id.sensor_name_vendor)).setText(mSensor.getName() + " {" + mSensor.getVendor() + "}");
+    }*/
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_detail);
 
-        Toolbar toolbar = (Toolbar) findViewById(R.id.custom_toolbar);
-        toolbar.setTitle("");
-        setSupportActionBar(toolbar);
-
+        mToolbar = (Toolbar) findViewById(R.id.custom_toolbar);
+        mToolbar.setTitle("");
+        setSupportActionBar(mToolbar);
         getSupportActionBar().setDisplayHomeAsUpEnabled(true);
-
-        mSensorManager = (SensorManager)getSystemService(SENSOR_SERVICE);
 
         Intent intent = getIntent();
         Integer sensorType = Integer.parseInt(intent.getStringExtra(MainActivity.EXTRA_SENSOR_TYPE));
         String sensorDescriptor = intent.getStringExtra(MainActivity.EXTRA_SENSOR_DESCRIPTOR);
-        ArrayList<Integer> sensorsList = intent.getIntegerArrayListExtra(MainActivity.EXTRA_SENSOR_LIST);
-        mSensors = new SensorWrapper[sensorsList.size()];
-        int i = 0;
-        for(Integer id : sensorsList) {
-            Sensor sensor = mSensorManager.getDefaultSensor(sensorType);
-            mSensors[i] = new SensorWrapper(this, sensor, id.toString());
-            if (id == Integer.parseInt(sensorDescriptor)) {
-                mSensor = mSensors[i];
-            }
-            i++;
-        }
 
-        TextView toolbarTitle = (TextView) toolbar.findViewById(R.id.toolbar_title);
-        toolbarTitle.setText(mSensor.getLocalizedName());
-        ((ImageView)findViewById(R.id.sensor_toolbar_icon)).setImageResource(mSensor.getImageId());
-
-        ((TextView)findViewById(R.id.sensor_name_vendor)).setText(sensor.getName() + " {" + sensor.getVendor() + "}");
-
-        mReadingsTextView = (TextView)findViewById(R.id.readings);
+        mSensors = new SensorContainer(this);
+        mSensor = mSensors.findByType(sensorType);
+        //renderMetaData();
 
         mShareString = getResources().getString(R.string.share_data);
         initializeShareIntent();
 
-
-        Fragment fragment = SensorFragment.newInstance(sensorType, sensorDescriptor);
-        if (fragment != null) {
-            FragmentManager fragmentManager = this.getSupportFragmentManager();
-            FragmentTransaction fragmentTransaction = fragmentManager.beginTransaction();
-            fragmentTransaction.add(R.id.detail_fragment, fragment);
-            fragmentTransaction.commit();
-        }
-
         mPager = (ViewPager) findViewById(R.id.pager);
         mPagerAdapter = new ScreenSlidePagerAdapter(getSupportFragmentManager());
         mPager.setAdapter(mPagerAdapter);
+        mPager.setCurrentItem(mSensor.getIndex());
     }
 
     protected void onResume() {
         super.onResume();
-        mSensorManager.registerListener(this, mSensor.getSensor(), SensorManager.SENSOR_DELAY_NORMAL);
+        mSensors.registerListener(mSensor);
     }
 
     protected void onPause() {
         super.onPause();
-        mSensorManager.unregisterListener(this);
+        mSensors.unregisterListener();
     }
 
     public void onAccuracyChanged(Sensor sensor, int accuracy) {  }
@@ -143,18 +128,13 @@ public class DetailActivity extends AppCompatActivity implements SensorEventList
 
         Float [] boxed = new Float[mValues.length];
         for (int i = 0; i < mValues.length; i++) {
-            boxed[i] = new Float(mValues[i]);
+            boxed[i] = Float.valueOf(mValues[i]);
         }
         mSensorValues = TextUtils.join(" | ", boxed);
-
-        SensorFragment fragment = (SensorFragment)getSupportFragmentManager().findFragmentById(R.id.detail_fragment);
-        String rawReadings = mSensorValues;
-        if (fragment != null) {
-            fragment.refresh(boxed);
-            rawReadings = fragment.getRawReadings(boxed);
+        if (mFragment != null) {
+            mFragment.refresh(boxed);
         }
 
-        mReadingsTextView.setText(rawReadings);
         mShareIntent.removeExtra(Intent.EXTRA_TEXT); // Remove previously set values from the intent
         mShareIntent.putExtra(Intent.EXTRA_TEXT, String.format(mShareString, mSensor.getLocalizedName(), mSensorValues));
     }
@@ -164,14 +144,24 @@ public class DetailActivity extends AppCompatActivity implements SensorEventList
             super(fm);
         }
 
+        private void renderMetaData() {
+            ((ImageView) findViewById(R.id.sensor_toolbar_icon)).setImageResource(mSensor.getImageId());
+            TextView toolbarTitle = (TextView) mToolbar.findViewById(R.id.toolbar_title);
+            toolbarTitle.setText(mSensor.getLocalizedName());
+        }
+
         @Override
         public Fragment getItem(int position) {
-            return new ScreenSlidePageFragment();
+            mSensor = mSensors.getSensor(position);
+            mFragment = SensorFragment.newInstance(mSensor.getType(), mSensor.getSensorDescriptor());
+
+            renderMetaData();
+            return mFragment;
         }
 
         @Override
         public int getCount() {
-            return NUM_PAGES;
+            return mSensors.count();
         }
     }
 }
